[package]
name = "twitch_recover"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
regex = "1.5.4"
sha-1 = "0.9.7"
chrono = "0.4.19"
crossterm = "0.20.0"

[profile.release]
lto = "fat"
opt-level = "z"